modified crossling examples

--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -24,21 +24,21 @@ I start with the competition between dative and accusative. Following the case s
 Consider the example in \ref{ex:gothic-acc-dat-rep}, repeated from the introduction. In this example, the internal case is dative and the external case is accusative.
 The internal case is dative. The preposition \tit{ana} `on' takes dative complements.
 The external case is accusative. The predicate \tit{ushafjands} `picking up' takes accusative objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{n}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-Examples, in which the relative pronoun appears in accusative case, the internal case is dative and the external case is accusative, are unattested.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{n}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
- {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{n} \-\ac{comp} lay\\
+ {picking up}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{n}.\ac{sg} \-\ac{comp} lay\\
  `picking up (that) on which he lay' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat-rep}
 
 Consider the example in \ref{ex:gothic-dat-acc-rep}, repeated from the introduction. In this example, the internal case is accusative and the external case is dative.
 The internal case is accusative. The predicate \tit{qiþiþ} `say' takes accusative objects.
 The external case is dative. The predicate \tit{taujau} `do' takes dative indirect objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples, in which the relative pronoun appears in accusative case, the internal case is accusative and the external case is dative, are unattested.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
 \exg. hva nu wileiþ ei taujau þamm \tbf{-ei} \tbf{qiþiþ} \tbf{þiudan} \tbf{Iudaie}?\\
- what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
+ what now want that do\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} say\scsub{[acc]} king {of Jews}\\
  `what now do you wish that I do to (him) whom you call King of the Jews?' \flushfill{Gothic, \ac{mark} 15:12, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-acc-rep}
 
 I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
@@ -46,43 +46,43 @@ I continue with the competition between dative and nominative. Following the cas
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal case is dative and the external case is nominative.
 The internal case is dative. The predicate \tit{fraletada} `is forgiven' takes dative objects.
 The external case is nominative. The predicate \tit{frijod} `loves' takes nominative subjects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{sg}.\ac{m}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
-Examples, in which the relative pronoun appears in nominative case, the internal case is dative and the external case is nominative, are unattested.
+The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
- but \ac{rel}.\ac{dat}.\ac{sg}.\ac{m} -\ac{comp} little {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
+ but \ac{rel}.\ac{dat}.\ac{m}.\ac{sg} -\ac{comp} little {is forgiven}\scsub{[dat]} little loves\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-dat-nom}
 
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal case is nominative and the external case is dative.
 The internal case is nominative. The predicate \tit{sind fraþjaiþ} `are above' takes a nominative subject.
 The external case is dative. The predicate \tit{fraþjaiþ} `think on' takes dative indirect objects.
 The relative pronoun \tit{þaim} `\ac{rel}.\ac{dat}.\ac{pl}.\ac{n}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is dative, are unattested.
+Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
  \ac{rel}.\ac{dat}.\ac{pl}.\ac{n} -\ac{comp} above are\scsub{[nom]} {think on}\scsub{[dat]}\\
  `set your mind on those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-nom-dat}
 
-I finish with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
+I end with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-acc-nom}, in which the internal case is accusative and the external case is nominative.
 The internal case is accusative. The predicate \tit{frijos} `love' takes accusative objects.
 The external case is nominative. The predicate \tit{siuks ist} `is sick' takes nominative subjects.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{m}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-Examples, in which the relative pronoun appears in nominative case, the internal case is accusative and the external case is nominative, are unattested.
+The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
- \ac{rel}.\ac{acc}.\ac{sg}.\ac{m} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
+ \ac{rel}.\ac{acc}.\ac{m}.\ac{sg} -\ac{comp} love\scsub{[acc]} sick is\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
 Consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{ist us Laudeikaion} `is from Laodicea' takes nominative subjects.
 The external case is accusative. The predicate \tit{ussiggwaid} `read' takes accusative objects.
-The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{sg}.\ac{n}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples, in which the relative pronoun appears in nominative case, the internal case is nominative and the external case is accusative, are unattested.
+The relative pronoun \tit{þo} `\ac{rel}.\ac{acc}.\ac{n}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and \ac{rel}.\ac{acc}.\ac{sg}.\ac{n} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
+ and \ac{rel}.\ac{acc}.\ac{n}.\ac{sg} -\ac{comp} is\scsub{[nom]} from Laodicea you read\scsub{[acc]}\\
  `and read that which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
 
 A summary of the Gothic data as a whole is given in Table \ref{tbl:summary-gothic}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match.
