--- a/variation.tex
+++ b/variation.tex
@@ -8,41 +8,44 @@
 
 let me show that the claim I made for Gothic holds for \ac{mg} as well: \tsc{dat} wins over \tsc{acc} wins over \tsc{nom}.
 
-\ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
+Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case is ungrammatical.
 
-\exg. *Ich {lade ein}, \tbf{wer} \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
- I invite\scsub{[acc]} \tsc{rel}.\ac{nom}.\tsc{an} me nice is\scsub{[nom]}\\
- `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
+\exg. *Ich {lade ein} wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
+ I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
+ `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
 
-\ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
+Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case is ungrammatical.
+
+\exg. *Uns besucht wer \tbf{Maria} \tbf{vertraut}.\\
+ us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria trusts\scsub{[dat]}\\
+ `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}
+
+Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case is ungrammatical.
+
+\exg. *Uns besucht wer \tbf{Maria} \tbf{mag}.\\
+ Us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
+ `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc-u}
+
+Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case is ungrammatical.
+
+\exg. *Ich vertraue \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
+ I trust\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria likes\scsub{[acc]}.\\
+ `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
+
+Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case is ungrammatical.
 
 \exg. *Ich vertraue, \tbf{wer} \tbf{Hitchcock} \tbf{mag}.\\
  I trust\scsub{[dat]} \tsc{rel}.\ac{nom}.\tsc{an} Hitchcock likes\scsub{[nom]}\\
  `I trust who likes Hitchcock.' \flushfill{\pgcitealt{vogel2001}{345}}
 
-\ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
+Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case is ungrammatical.
 
- \exg. *Uns besucht wer \tbf{Maria} \tbf{mag}.\\
-  Us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
-  `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}
+\exg. *Ich {lade ein}, \tbf{wer} \tbf{mir} \tbf{sympathisch} \tbf{ist}.\\
+ I invite\scsub{[acc]} \tsc{rel}.\ac{nom}.\tsc{an} me nice is\scsub{[nom]}\\
+ `I invite who I like.' \flushfill{\pgcitealt{vogel2001}{344}}
 
-\ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
 
- \exg. *Ich {lade ein} wen \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
-  I invite\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
-  `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}
 
-\ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
-
- \exg. *Ich vertraue \tbf{wen} \tbf{auch} \tbf{Maria} \tbf{mag}. \\
-  I trust\scsub{[dat]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria likes\scsub{[acc]}.\\
-  `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
-
-\ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
-
- \exg. *Uns besucht wer \tbf{Maria} \tbf{vertraut}.\\
-  us visits\scsub{[nom]} \tsc{rel}.\ac{nom}.\tsc{an} Maria trusts\scsub{[dat]}\\
-  `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}
 
 \subsection{\ac{ohg}}
 
@@ -104,26 +107,35 @@ In Italian, case mismatch is not allowed.
  `I trust whoever Maria also likes.' \flushfill{\pgcitealt{vogel2001}{345}}
 
 
+
 \subsubsection{internal case = grammatical}
 
-\ac{int}:\ac{acc}, \ac{ext}:\ac{nom}
-
-\exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
- Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
- `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}
-
-\ac{int}:\ac{dat}, \ac{ext}:\ac{acc}
+Consider the example in \ref{ex:mg-acc-dat}. In this example, the internal case is dative and the external case is accusative.
+The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
+The external case is accusative. The predicate \tit{lade ein} `invite' takes accusative objects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Ich {lade ein} \tbf{wem} \tbf{auch} \tbf{Maria} \tbf{vertraut}. \\
  I invite\scsub{[acc]} \tsc{rel}.\ac{dat}.\tsc{an} also Maria trusts\scsub{[dat]}.\\
- `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}
+ `I invite whoever Maria also trusts.' \flushfill{\pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat}
 
-\ac{int}:\ac{dat}, \ac{ext}:\ac{nom}
+Consider the example in \ref{ex:mg-nom-dat}. In this example, the internal case is dative and the external case is nominative.
+The internal case is dative. The predicate \tit{vertraut} `trusts' takes dative objects.
+The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
+The relative pronoun \tit{wem} `\tsc{rel}.\ac{dat}.\tsc{an}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. Uns besucht \tbf{wem} \tbf{Maria} \tbf{vertraut}.\\
  us visits\scsub{[nom]} \tsc{rel}.\ac{dat}.\tsc{an} Maria trusts\scsub{[dat]}\\
- `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}
+ `Who visits us, Maria trusts.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-dat}
 
+ Consider the example in \ref{ex:mg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
+ The internal case is accusative. The predicate \tit{mag} `likes' takes accusative objects.
+ The external case is nominative. The predicate \tit{besucht} `visits' takes nominative subjects.
+ The relative pronoun \tit{wen} `\tsc{rel}.\ac{acc}.\tsc{an}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+ \exg. Uns besucht \tbf{wen} \tbf{Maria} \tbf{mag}.\\
+  Us visits\scsub{[nom]} \tsc{rel}.\ac{acc}.\tsc{an} Maria.\ac{nom} likes\scsub{[acc]}\\
+  `Who visits us likes Maria likes.' \flushfill{\pgcitealt{vogel2001}{343}}\label{ex:mg-nom-acc}
 
 
  \begin{table}[H]
@@ -161,23 +173,60 @@ In Italian, case mismatch is not allowed.
 
   \subsubsection{external is grammatical}
 
- \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{acc}
- \a. \ac{nom} not attested
- \bg. ih bibringu fona Juda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
-  I educate\scsub{[acc]} about Juda \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
-  `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}
 
- \ex. \ac{int}:\ac{nom}, \ac{ext}:\ac{dat}
- \a. \ac{nom} not attested
- \bg. aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
-  he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
-  `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}
+Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is accusative and the external case is dative.
+The internal case is nominative. The predicate \tit{zalta} `named' takes accusative objects.
+The external case is dative. The predicate \tit{furira} `superior' takes dative objects.
+The relative pronoun \tit{thên} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
 
- \ex. \ac{int}:\ac{acc}, \ac{ext}:\ac{dat}
- \a. \ac{acc} not attested
- \bg. istû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
-  {are you} superior\scsub{[dat]} {to Abraham} also \tsc{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
-  `are you superior to Abraham to those which they just mentioned?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}
+\exg. istû furira Abrâhame, ouh thên \tbf{man} \tbf{hiar} \tbf{nû} \tbf{zalta}?\\
+ {are you} superior\scsub{[dat]} {to Abraham} also \tsc{rel}.\ac{dat}.\tsc{pl} one here now named\scsub{[acc]}\\
+ `are you superior to Abraham to those which they just mentioned?' \flushfill{\ac{ohg}, \ac{otfrid} III 18:33, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-dat-acc}
+
+Consider the example in \ref{ex:ohg-dat-nom}. In this example, the internal case is nominative and the external case is dative.
+The internal case is nominative. The predicate \tit{sprah} `spoke' takes nominative subjects.
+The external case is dative. The predicate \tit{antuurta} `replied' takes dative objects.
+The relative pronoun \tit{demo} `\ac{rel}.\ac{dat}.\ac{m}.\ac{sg}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
+
+\exg. aer antuurta demo \tbf{zaimo} \tbf{sprah}\\
+ he replied\scsub{[dat]} \tsc{rel}.\ac{dat}.\tsc{m}.\tsc{sg} {to him} spoke\scsub{[nom]}\\
+ `he replied to the one who spoke to him' \flushfill{\ac{ohg}, \ac{mons} 7:24, \pgcitealt{behaghel1923}{761}, after \pgcitealt{pittner1995}{199}}\label{ex:ohg-dat-nom}
+
+Consider the example in \ref{ex:ohg-acc-nom}. In this example, the internal case is nominative and the external case is accusative.
+The internal case is nominative. The predicate \tit{chisetzit} `pull through' takes nominative subjects.
+The external case is accusative. The predicate \tit{bibringu} `educate' takes accusative objects.
+The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
+
+\exg. ih bibringu fona Juda dhen \tbf{mina} \tbf{berga} \tbf{chisetzit}\\
+ I educate\scsub{[acc]} about Juda \tsc{rel}.\ac{acc}.\tsc{m}.\tsc{sg} my mountains {through pull}\scsub{[nom]}\\
+ `I educate the one who wanders through my mountains about Judas' \flushfill{\ac{ohg}, \ac{isid} 34:3, \pgcitealt{behaghel1923}{761}}\label{ex:ohg-acc-nom}
+
+  \exg. gaat uz diu halt za dem iz forchaufent\\
+   \\
+   `' \flushfill{\ac{ohg}, Monsee Fragments 20,14, \citealt[761]{behaghel1923}}
+  % \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
+  %  \\
+  %  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{\ac{ohg}, Tatian 118,1, \citealt[761]{behaghel1923}}
+  % \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
+  %  \\
+  %  `' \flushfill{\ac{ohg}, Otfrid II,8,24, \citealt[761]{behaghel1923}}
+
+
+  \exg. thia laz ih themo iz lisit thar\\
+   \\
+   `' \flushfill{\ac{ohg}, Otfrid I,19,25, \citealt[761]{behaghel1923}}
+  % \bg. noh so neduohti in gnuoge des si habetin\\
+  %  \\
+  %  `' \flushfill{\ac{ohg}, Notker I,63,29, \citealt[761]{behaghel1923}}
+  % \bg. tannoh pito ih tes noh fore ist (id quod)\\
+  %  \\
+  %  `' \flushfill{\ac{ohg}, Notker 193,19, \citealt[761]{behaghel1923}}
+
+
+
 
 
   \subsubsection{internal is ungrammatical}
@@ -196,26 +245,6 @@ In Italian, case mismatch is not allowed.
 
 
  Don't know:
-
- \ex. \ac{ohg}
- \ag. gaat uz diu halt za dem iz forchaufent\\
-  \\
-  `' \flushfill{\ac{ohg}, Monsee Fragments 20,14, \citealt[761]{behaghel1923}}
- % \bg. thisiu fon thiu, iru wan ist, siu alla iru libnara santa (ex eo, quod)\\
- %  \\
- %  `hæc autem ex eo quod deest illi, totum victum suum quem habuit misit.' \flushfill{\ac{ohg}, Tatian 118,1, \citealt[761]{behaghel1923}}
- % \bg. thaz iru thiu sin guati nirzigi, thes siu bati\\
- %  \\
- %  `' \flushfill{\ac{ohg}, Otfrid II,8,24, \citealt[761]{behaghel1923}}
- \bg. thia laz ih themo iz lisit thar\\
-  \\
-  `' \flushfill{\ac{ohg}, Otfrid I,19,25, \citealt[761]{behaghel1923}}
- % \bg. noh so neduohti in gnuoge des si habetin\\
- %  \\
- %  `' \flushfill{\ac{ohg}, Notker I,63,29, \citealt[761]{behaghel1923}}
- % \bg. tannoh pito ih tes noh fore ist (id quod)\\
- %  \\
- %  `' \flushfill{\ac{ohg}, Notker 193,19, \citealt[761]{behaghel1923}}
 
  So, to sum up:
 
